--- a/index.ipynb
+++ b/index.ipynb
@@ -1127,7 +1127,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "text_values = ['City 1',]\n",
+    "text_values = ['City 1', 'Toronto', 'M']\n",
     "# bar_trace_first_three_pops = {'type': 'bar', 'x': x_values, 'y': y_values, 'text': text_values}"
    ]
   },
